--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^6.0.8",
     "morgan": "~1.9.1"
   }
 }
