--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jade": "~1.11.0",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.13"
   }
 }
